# seq_consensus

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: validate.yaml
docs/source/: api.rst  conf.py  index.rst  usage.rst
src/seq_consensus/: __init__.py  cons_tool.py  consensus.py
tests/: test_seq_consensus.py
